Add GetFeeds load test, add getFeeds Servlet, add Register#registerBean(), update feed DB schema